# csci547_ML

./: .gitignore  _quarto.yml  pyproject.toml
assignments/: Assignment_0.ipynb  Assignment_1.ipynb  Assignment_1_Q11_Example.ipynb
examples/: Logistic Regression.ipynb  Polynomial_Regression_Hackathon.ipynb  ridge_regression.ipynb  scikit_learn_intro.ipynb
examples/.ipynb_checkpoints/: Logistic Regression-checkpoint.ipynb
