[project]
name = "csci547-ml"
version = "0.1.0"
description = ""
authors = [
    {name = "Mase3206",email = "35052448+Mase3206@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "scikit-learn (>=1.7.1,<2.0.0)",
    "ipykernel (>=6.30.1,<7.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "jupyterlab (>=4.4.7,<5.0.0)",
    "jupyterlab-lsp (>=5.2.0,<6.0.0)",
    "python-lsp-server[all] (>=1.13.1,<2.0.0)",
    "jupyterlab-quarto (>=0.3.5,<0.4.0)"
]

[tool.poetry]
package-mode = false


# [build-system]
# requires = ["poetry-core>=2.0.0,<3.0.0"]
# build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
notebook = "^7.4.5"

